# ces-35-exam

./: .gitignore  README.md  config.py  main.py  pyproject.toml  utils.py
agents/: agent.py  communication.py  movement.py
attacker/: attacker.py
environment/: main.py
