[tool.poetry]
name = "exame-ces-35"
version = "0.1.0"
description = ""
authors = ["Felipe Spirandelli <felipereisspirandelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
shapely = "^2.0.6"
matplotlib = "^3.9.3"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
